# NDSL

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  README.md  fms_example.py  index.html  mkdocs.yml  ndsl_diag.py  ndsl_diag_class.py  objects.inv  pyproject.toml  setup.cfg  setup.py  tach.toml  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: README.md  release-patch.md  release.md
.github/workflows/: build_test.yaml  create-cache.yaml  docs_build.yaml  docs_deploy.yaml  fv3_tests.yaml  fv3_translate_tests.yaml  fv3_unit_tests.yaml  lint.yaml  pace_tests.yaml  shield_tests.yaml  shield_translate_tests.yaml  test.yaml  unit_tests.yaml
dev/: index.html
dev/dace/: index.html
dev/gt4py/: index.html
docs/: README.md  builddocs.sh  developer_guide.rst  docker.rst  index.md  index.rst  quickstart.md  requirement_docs.txt
docs/dev/: dace.md  gt4py.md  index.md
docs/docstrings/: index.md
docs/includes/: glossary.md
docs/internal/: README.md  breaking_changes.md  release.md
docs/porting/: index.md
docs/sphinx_doc/: Makefile  conf.py  dace.rst  developer_guide.rst  docker.rst  fortran_porting.rst  gt4py.rst  index.rst  make.bat  overview.rst  program_guid.rst  test.rst  testing.rst  users_guide.rst
docs/user/: index.md
docstrings/: index.html
examples/Fortran_porting/: 01.ipynb  01_serialize_fortran_data.ipynb  02.ipynb  02_read_serialized_data_python.ipynb  03_translate_test.ipynb
examples/Fortran_serialization/: 01_serialize_fortran_data.ipynb  02_read_serialized_data_python.ipynb
examples/NDSL/: 01_basics.ipynb  01_gt4py_basics.ipynb  02_NDSL_basics.ipynb  03_orchestration_basics.ipynb  NDSL_basics.ipynb  README.md  basic_boilerplate.py  boilerplate.py  orch_boilerplate.py
examples/gt4py/: 01_basics.ipynb  02_oo_gt4py.ipynb  basics.ipynb  boilerplate.py  oo_gt4py.ipynb
examples/mpi/: global_timings.py  zarr_monitor.py
examples/serialbox/: 01.ipynb  02.ipynb
includes/glossary/: index.html
ndsl/: __init__.py  boilerplate.py  buffer.py  config.py  constants.py  exceptions.py  filesystem.py  io.py  logging.py  namelist.py  optional_imports.py  quantity.py  types.py  typing.py  units.py  utils.py
ndsl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ndsl/checkpointer/: __init__.py  base.py  null.py  snapshots.py  thresholds.py  validation.py
ndsl/comm/: __init__.py  _boundary_utils.py  boundary.py  caching_comm.py  comm_abc.py  communicator.py  decomposition.py  local_comm.py  mpi.py  null_comm.py  partitioner.py
ndsl/config/: __init__.py  backend.py
ndsl/data/: eta.py
ndsl/debug/: __init__.py  config.py  debugger.py  mode.py  tooling.py
ndsl/dsl/: __init__.py  gt4py_utils.py  ndsl_runtime.py  runtime.py  stencil.py  stencil_config.py  typing.py
ndsl/grid/: __init__.py  eta.py  generation.py  geometry.py  global_setup.py  gnomonic.py  helper.py  mirror.py  stretch_transformation.py
ndsl/halo/: __init__.py  cuda_kernels.py  data_transformer.py  rotate.py  updater.py
ndsl/initialization/: __init__.py  allocator.py  grid_sizer.py  sizer.py  subtile_grid_sizer.py
ndsl/internal/: deferred_type.py  python_extensions.py
ndsl/monitor/: __init__.py  convert.py  diag_manager_monitor.py  netcdf_monitor.py  protocol.py  zarr_monitor.py
ndsl/performance/: __init__.py  collector.py  config.py  profiler.py  report.py  timer.py  tools.py
ndsl/quantity/: __init__.py  bounds.py  data_dimensions_field.py  field_bundle.py  local.py  metadata.py  quantity.py  state.py  temporaries.py  tracer_bundle.py  tracer_bundle_type.py
ndsl/restart/: _legacy_restart.py  _properties.py  restart_properties.yml
ndsl/scripts/: generate_eta_files.py
ndsl/stencils/: __init__.py  basic_operations.py  c2l_ord.py  column_operations.py  corners.py  tridiag.py
ndsl/testing/: README.md  comparison.py  dummy_comm.py  perturbation.py
ndsl/viz/: __init__.py  cube_sphere.py
ndsl/xumpy/: __init__.py  alloc.py  count_nonzero.py  minmax.py
porting/: index.html
porting/translate/: index.html
pyFMS/: __init__.py  pyFMSlib.py
pyFMS/block_control/: pyFMS_block_control.py  pyFMSblockcontrol.py
pyFMS/data_overide/: pyFMS_data_override.py
pyFMS/fms/: pyFMS_fms.py  pyFMSinit.py
pyFMS/interfaces/: mpp_utilities_mod_interface.F90  mpp_utilities_mod_interface.mod
pyFMS/mpp/: pyFMS_mpp_efp.py  pyFMS_mpp_memutils.py  pyFMS_mpp_pset.py  pyFMS_mpp_util.py  pyMPP.py  pyMPPdomains.py  pyMPPefp.py  pyMPPmemutils.py  pyMPPpset.py  pyMPPutil.py
pydocs/: get_and_create_md.py  mkdocs.yml
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  ndsl_diag.py  test_4d_fields.py  test_backend.py  test_basic_operations.py  test_boilerplate.py  test_buffer.py  test_caching_comm.py  test_cube_scatter_gather.py  test_decomposition.py  test_diag_manager_monitor.py  test_dimension_sizer.py  test_dm_monitor_cubed.py  test_dm_monitor_single.py  test_exceptions.py  test_filesystem.py  test_g2g_communication.py  test_halo_data_transformer.py  test_halo_update.py  test_halo_update_ranks.py  test_legacy_restart.py  test_local_comm.py  test_namelist.py  test_ndsl_runtime.py  test_netcdf_monitor.py  test_null_comm.py  test_partitioner.py  test_partitioner_boundaries.py  test_rotate.py  test_sync_shared_boundary.py  test_tile_scatter.py  test_tile_scatter_gather.py  test_timer.py  test_utils.py  test_xumpy.py  test_zarr_monitor.py
tests/checkpointer/: test_snapshot.py  test_thresholds.py  test_validation.py
tests/config/: test_backend.py
tests/dsl/: __init__.py  test_caches.py  test_compilation_config.py  test_dace_config.py  test_skip_passes.py  test_stencil.py  test_stencil_config.py  test_stencil_factory.py  test_stencil_tables.py  test_stencil_wrapper.py  utils.py
tests/grid/: generate_eta_files.py  test_eta.py
tests/initialization/: test_allocator.py
tests/mpi/: __init__.py  mpi_comm.py  test_decomposition.py  test_eta.py  test_mpi_all_reduce_sum.py  test_mpi_halo_update.py  test_mpi_mock.py
tests/quantity/: test_boundary.py  test_datadimensionfields.py  (+12 more)
user/: index.html
(+265 files in other folders)
