[flake8]
exclude = docs
ignore = E203,E501,W293,W503,E302,E203,F841
max-line-length = 88

[aliases]

[tool:isort]
line_length = 88
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
lines_after_imports = 2
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_third_party = f90nml,pytest,xarray,numpy,mpi4py,gt4py,dace

[mypy]
ignore_missing_imports = True
follow_imports = normal
namespace_packages = True
strict_optional = False
warn_unreachable = True
explicit_package_bases = True

[coverage:run]
parallel = true
branch = true
omit =
        tests/*
        *gt_cache*
        .dacecache*
        external/*
        __init__.py
source_pkgs = ndsl

[metadata]
# Include the license file in the generated wheel, see
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
